--- a/code/Random_Forest_Model.ipynb
+++ b/code/Random_Forest_Model.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from load_data import load_data, load_resized_data\n",
+    "from load_data import load_resized_data\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
